Fix RNA_property_pointer_get creating data in non-thread-safe way. #90170

Closed
opened 2021-07-26 15:47:14 +02:00 by Bastien Montagne · 5 comments

Current RNA_property_pointer_get code creates the data if missing in IDProperty case (see rna_acces.c). With a comment that is is very bad to create data in accessor code...

This comes from initial twelve years old commit (4fb19159ea) and was never addressed since then.

This is currently causing memleaks in liboverride diffing code, which is parallelized on the ID level. The problem shows up when you have several overrides of the same linked ID, then diffing code can access concurrently to the same linked ID and generate IDProperty several time for the same entry.


I can think of several ways to solve this issue:

  • Add a lock (mutex, spinlock...) protection that specific bad piece of code.
  • Never generate IDproperty data for linked IDs (since it won't be saved in any case).
  • Try to actually fix that bad code - not sure what would be the implications of not silently generating those IDProperty data on access though... Have the feeling this could be quite API-disruptive?
Current `RNA_property_pointer_get` code creates the data if missing in IDProperty case (see `rna_acces.c`). With a comment that is is very bad to create data in accessor code... This comes from initial twelve years old commit (4fb19159ea) and was never addressed since then. This is currently causing memleaks in liboverride diffing code, which is parallelized on the ID level. The problem shows up when you have several overrides of the same linked ID, then diffing code can access concurrently to the same linked ID and generate IDProperty several time for the same entry. ------------------------------ I can think of several ways to solve this issue: - Add a lock (mutex, spinlock...) protection that specific bad piece of code. - Never generate IDproperty data for linked IDs (since it won't be saved in any case). - Try to actually fix that bad code - not sure what would be the implications of not silently generating those IDProperty data on access though... Have the feeling this could be quite API-disruptive?
Author
Owner

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Author
Owner

Added subscribers: @mont29, @brecht

Added subscribers: @mont29, @brecht

I suggest to just add a mutex lock. It's difficult to work around at this point.

The issue is that if you have some nested properties, like scene.cycles.samples, it would be nice if we could only allocate the cycles ID property group when one if its properties is set for the first time. But I can't think of a practical way to create an RNA pointer to scene.cycles when it does not exist yet, without adding a lot of complexity.

For the library diffing code specifically, it could perhaps not enter into that struct when it has not been allocated, but doesn't solve the potential issue in other cases.

I suggest to just add a mutex lock. It's difficult to work around at this point. The issue is that if you have some nested properties, like `scene.cycles.samples`, it would be nice if we could only allocate the `cycles` ID property group when one if its properties is set for the first time. But I can't think of a practical way to create an RNA pointer to `scene.cycles` when it does not exist yet, without adding a lot of complexity. For the library diffing code specifically, it could perhaps not enter into that struct when it has not been allocated, but doesn't solve the potential issue in other cases.

This issue was referenced by 317f09ebf9

This issue was referenced by 317f09ebf990ab4a5d033bab61a0aa8816772615
Author
Owner

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Bastien Montagne self-assigned this 2021-08-05 12:15:41 +02:00
Thomas Dinges added this to the 3.0 milestone 2023-02-08 15:59:05 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#90170
No description provided.